--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "parallax/filament-comments": "^1.2",
         "spatie/laravel-permission": "^6.3",
         "swisnl/filament-backgrounds": "^1.1"
     },
