--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^3.0",
         "filament/filament": "3.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
@@ -16,7 +17,8 @@
         "laravel/tinker": "^2.8",
         "parallax/filament-comments": "^1.3",
         "spatie/laravel-permission": "^6.3",
-        "swisnl/filament-backgrounds": "^1.1"
+        "swisnl/filament-backgrounds": "^1.1",
+        "unicodeveloper/laravel-paystack": "^1.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
